trunk/Archive2/9a/cd0f96d8995671/output
main.cpp:7:2: error: function definition is not allowed here
 {
 ^
main.cpp:13:7: warning: 'register' storage class specifier is deprecated [-Wdeprecated-register]
 for (register long n=1; y<0 ;n++)
      ^~~~~~~~~
1 warning and 1 error generated.
